trying to fix JS file path

--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@
 </footer>
 
 
-<script type='text/javascript' src='/scripts/main.js'></script>
+<script type='text/javascript' src='./scripts/main.js'></script>
 </body>
 </html>
