--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </ul>
 </div>
 
-<button class='defaultButton' onclick='defaultSettings()'>Reset to Defaults</button>
+<button class='defaultButton' onclick='SetDefaults()'>Reset to Defaults</button>
 
 <div class='avgCapacity'>
    <h2>Average Capacity of Blocks</h2>
